Add padding to header

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <div class="container">
-    <h1>Community Photo Frame</h1>
+    <h1 class="pt-4">Community Photo Frame</h1>
     <hr>
 
     {{ dropzone.create(action_view='index') }}
