--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
     <hr>
 
     {{ dropzone.create(action_view='index') }}
+    {{ dropzone.load_js() }}
     {{ dropzone.config() }}
 
     <form method="POST" enctype="multipart/form-data">
